# Spora

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.ja.md  README.md  USAGE.md
example_project/: spora.toml
example_project/.spora/: fingerprints.json
example_project/src/main/java/: Main.java
example_project/src/main/java/com/example/util/: Util.java
resources/: versions.json
src/: builder.rs  config.rs  logger.rs  main.rs  platform.rs  resolver.rs  store.rs  toolchain.rs
tests/: cli_test.rs
