[package]
name = "spora"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Korphere/Spora"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
walkdir = "2.4"
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
roxmltree = "0.19"
zip = "0.6"
fs_extra = "1.3"
serde_json = "1.0.149"
flate2 = "1.0"
tar = "0.4"
rayon = "1.8"
indicatif = { version = "0.17", features = ["rayon"] }
colored = "2.1"
tempfile = "3"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
